--- a/Pages/Roadmap/roadmaps/self-care.html
+++ b/Pages/Roadmap/roadmaps/self-care.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <h1>Self - Care</h1>
+        <a href="self-care.html"><h1>Self - Care</h1></a>
         <a href="/Pages/Goals/goals.html"
           ><img class="icon" src="/Addons/imgs/icons8-home-96.png" alt="Home"
         /></a>
