--- a/Pages/Roadmap/roadmaps/self-care.html
+++ b/Pages/Roadmap/roadmaps/self-care.html
@@ -27,7 +27,9 @@
         <p>4. Repair body</p>
       </section>
       <section class="hidden" id="detail">
-        <p></p>
+        <p>
+          Improving my appearance & being able to look , smell and appear nice
+        </p>
       </section>
       <section class="hidden" id="breakdown">
         <div class="box">
@@ -59,7 +61,14 @@
         </div>
       </section>
       <section class="hidden" id="items">
-        <p></p>
+        <ul>
+          <a><li>Flaxseed Gel</li></a>
+          <a><li>SCurl Texturizer</li></a>
+          <a><li>Face towels</li></a>
+          <a><li>CeraVe Facial</li></a>
+          <a><li>Beauty by Earth Organic Lip bomb</li></a>
+          <a><li>Japanese Matcha face mask</li></a>
+        </ul>
       </section>
       <footer>
         <ul class="bottom-nav">
