--- a/Pages/Goals/goals.html
+++ b/Pages/Goals/goals.html
@@ -110,7 +110,7 @@
       </section>
 
       <!-- Where I am at in life -->
-      <section class="life">
+      <section class="life hidden">
         <div class="container">
           <h1>Heath</h1>
           <p>
@@ -145,6 +145,7 @@
 
       <!-- Why is this goal important -->
       <section class="goals hidden">
+        
         <div class="card" style="width: 18rem">
           <div class="card-body">
             <h5 class="card-title">Self - Care</h5>
@@ -156,6 +157,18 @@
             <a href="/Pages/Roadmap/roadmaps/self-care.html" class="card-link">Roadmap</a>
           </div>
         </div>
+
+        <div class="card" style="width: 18rem">
+          <div class="card-body">
+            <h5 class="card-title">Self - Care</h5>
+            <img src="/Addons/imgs/roadmap/Data-Science.jpg" alt="Self-Care">
+            <p class="card-text">
+
+            </p>
+            <a href="/Pages/Roadmap/roadmaps/career.html" class="card-link">Roadmap</a>
+          </div>
+        </div>
+
       </section>
     </main>
     <footer>
