--- a/Pages/Roadmap/roadmaps/self-care.html
+++ b/Pages/Roadmap/roadmaps/self-care.html
@@ -66,8 +66,9 @@
           <a><li>SCurl Texturizer</li></a>
           <a><li>Face towels</li></a>
           <a><li>CeraVe Facial</li></a>
-          <a><li>Beauty by Earth Organic Lip bomb</li></a>
-          <a><li>Japanese Matcha face mask</li></a>
+          <a><li>Organic Lip bomb</li></a>
+          <a><li>Matcha face mask</li></a>
+          <a><li>Pair of socks</li></a>
         </ul>
       </section>
       <footer>
