--- a/Pages/Goals/goals.html
+++ b/Pages/Goals/goals.html
@@ -12,8 +12,8 @@
     <header>
       <nav class="navbar">
         <h1>Goals</h1>
-        <button>Menu</button>
-        <div class="hidden">
+        <button class="menu-btn">Menu</button>
+        <div class="hidden menu">
           <ul class="nav-list">
             <a href="/index.html"><li>Home</li></a>
             <a href="/Pages/Projects/projects.html"><li>Projects</li></a>
