--- a/Pages/Roadmap/roadmaps/career.html
+++ b/Pages/Roadmap/roadmaps/career.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="layout-roadmap.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Self-Care</title>
+    <title>Career</title>
   </head>
   <body>
     <header>
@@ -18,7 +18,7 @@
     <main>
       <div class="vision">
         <h1 class="vision-text">Vision Board</h1>
-        <img src="#" alt="Vision Board" />
+        <img src="/Addons/imgs/vision/progrmmer.jpg" alt="Vision Board" />
       </div>
       <section class="hidden" id="steps">
         <p></p>
