--- a/Pages/Goals/goals.html
+++ b/Pages/Goals/goals.html
@@ -17,7 +17,6 @@
           <ul class="nav-list">
             <a href="/index.html"><li>Home</li></a>
             <a href="/Pages/Projects/projects.html"><li>Projects</li></a>
-            <a href="/Pages/Roadmap/roadmaps.html"><li>Roadmaps</li></a>
             <a href="/Pages/Tracker/tracker.html"><li>Trackers</li></a>
             <a href="/Pages/Colllection/collection.html"><li>Collection</li></a>
           </ul>
@@ -160,10 +159,11 @@
 
         <div class="card" style="width: 18rem">
           <div class="card-body">
-            <h5 class="card-title">Self - Care</h5>
+            <h5 class="card-title">Career</h5>
             <img src="/Addons/imgs/roadmap/Data-Science.jpg" alt="Self-Care">
             <p class="card-text">
-
+              This goal is important bescuase it allows me to get my futrue life and 
+              things I dream of doing come true.
             </p>
             <a href="/Pages/Roadmap/roadmaps/career.html" class="card-link">Roadmap</a>
           </div>
