--- a/Pages/Roadmap/roadmaps/career.html
+++ b/Pages/Roadmap/roadmaps/career.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="layout-roadmap.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Career</title>
@@ -21,41 +27,102 @@
         <img src="/Addons/imgs/vision/progrmmer.jpg" alt="Vision Board" />
       </div>
       <section class="hidden" id="steps">
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        <p>School</p>
+        <p>Frontend</p>
+        <p>Al and Data Scientist</p>
+        <p>Software Developer</p>
+        <p>Robotics</p>
+        <p>Game Developer</p>
       </section>
       <section class="hidden" id="detail">
-        <p></p>
+        <p>
+          Improving my programming knowledge and creating different projects.
+        </p>
       </section>
       <section class="hidden" id="breakdown">
         <div class="box">
-          <h1 class="vision-text"></h1>
-          <p></p>
-          <p></p>
-          <p></p>
+          <h1 class="vision-text">School</h1>
+          <p>1.1 Compare and contrast notational systems.</p>
+          <p>1.3 Illustrate the basics of computing and processing.</p>
+          <p>1.4 Explain the value of data and information.</p>
+          <p>1.5 Compare and contrast common units of measure.</p>
+          <p>2.1 Classify common types of input/output device interfaces.</p>
+          <p>
+            2.3 Explain the purpose of common internal computing components.
+          </p>
+          <p>2.4 Compare and contrast common Internet service types.</p>
+          <p>2.7 Explain basic networking concepts.</p>
+          <p>
+            2.8 Given a scenario, install, configure, and secure a basic
+            wireless network.
+          </p>
+          <p>3.1 Explain the purpose of operating systems.</p>
+          <p>3.2 Compare and contrast components of an operating system.</p>
+          <p>3.3 Explain the purpose and proper use of software.</p>
+          <p>4.1 Compare and contrast programming language categories.</p>
+          <p>
+            4.2 Given a scenario, use programming organizational techniques and
+            interpret logic.
+          </p>
+          <p>4.3 Explain the purpose and use of programming concepts.</p>
+          <p>5.1 Explain database concepts and the purpose of a database.</p>
+          <p>5.2 Compare and contrast various database structures.</p>
+          <p>5.3 Summarize methods used to interface with databases.</p>
+          <p>
+            6.1 Summarize confidentiality, integrity, and availability concerns.
+          </p>
+          <p>6.3 Summarize behavioral security concepts.</p>
+          <p>
+            6.4 Compare and contrast authentication, authorization, accounting,
+            and non-repudiation concepts.
+          </p>
         </div>
 
-        <div class="box">
-          <h1 class="vision-text"></h1>
-          <p></p>
-          <p></p>
-          <p></p>
+        <div class="card" style="width: 18rem">
+          <img
+            src="/Addons/imgs/roadmap/Front.jpg"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">Front End</h5>
+            <p class="card-text">
+              Step by step guide to becoming a modern frontend developer in 2024
+            </p>
+            <a href="https://roadmap.sh/frontend" class="btn btn-primary"
+              >Roadmap</a
+            >
+          </div>
         </div>
-
-        <div class="box">
-          <h1 class="vision-text"></h1>
-          <p></p>
-          <p></p>
+        <div class="card" style="width: 18rem">
+          <img
+            src="/Addons/imgs/roadmap/Game.png"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">Game Developer</h5>
+            <p class="card-text">
+              Roadmap to becoming a Game Developer in 2024
+            </p>
+            <a href="https://roadmap.sh/game-developer" class="btn btn-primary"
+              >Roadmap</a
+            >
+          </div>
         </div>
-
-        <div class="box">
-          <h1 class="vision-text"></h1>
-          <p></p>
-          <p></p>
-          <p></p>
-          <p></p>
+        <div class="card" style="width: 18rem">
+          <img
+            src="/Addons/imgs/roadmap/Data-Science.jpg"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">AI and Data Scientist</h5>
+            <p class="card-text">
+              Step by step guide to becoming an AI and Data Scientist in 2024
+            </p>
+            <a href="#" class="btn btn-primary">Roadmap</a>
+          </div>
         </div>
       </section>
       <section class="hidden" id="items">
@@ -102,6 +169,11 @@
         </ul>
       </footer>
     </main>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <script src="layout.js"></script>
   </body>
 </html>
