--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <body>
     <header>
       <nav class="navbar">
-        <div>
-          <h2>It starts here</h2>
-        </div>
-        <button id="menu">Menu</button>
-      </nav>
+        <nav class="navbar" id="navigation">
+          <div>
+            <h2>It starts here</h2>
+          </div>
+          <button id="menu">Menu</button>
+        </nav>
       <div class="ul-links hidden">
         <ul class="links">
           <li><a href="Pages/Projects/projects.html">Projects</a></li>
