--- a/index.html
+++ b/index.html
@@ -27,9 +27,21 @@
     </header>
     <main>
       <section>
-        <video onloadstart="this.volume=0.1" autoplay="autoplay" loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto"  id="myVideo">
-          <source src="https://www.dropbox.com/scl/fi/wh8xy0s2dvlnfc5izr4uc/Hisoka.mp4?rlkey=epnvlemzky244e6hn4ezst8af&st=hlu0d8pl&raw=1"
-          type="video/mp4">
+        <video
+          onloadstart="this.volume=0.1"
+          autoplay="autoplay"
+          loop="loop"
+          muted
+          defaultMuted
+          playsinline
+          oncontextmenu="return false;"
+          preload="auto"
+          id="myVideo"
+        >
+          <source
+            src="https://www.dropbox.com/scl/fi/wh8xy0s2dvlnfc5izr4uc/Hisoka.mp4?rlkey=epnvlemzky244e6hn4ezst8af&st=hlu0d8pl&raw=1"
+            type="video/mp4"
+          />
         </video>
         <div class="content">
           <h1>To a Better Life</h1>
